# Repo-Template

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yml  ruleset.json
.github/workflows/: ci.yml  security.yml
src/: main.py
tests/: test_main.py
